--- a/game/package.json
+++ b/game/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "game",
+  "name": "type-war",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,7 +14,8 @@
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
