--- a/game/tsconfig.json
+++ b/game/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
+    "types": ["node"],
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
